tests/negative/test_data_redef.orb
data Foo {
    x:i32
};

data Foo {
    x:i32
};

fnc main() () {};